--- a/mcp-navigator/tsconfig.json
+++ b/mcp-navigator/tsconfig.json
@@ -1,4 +1,57 @@
 {
+  "//": "=============================================================================",
+  "//": "                    MCP Navigator - TypeScript 主配置",
+  "//": "=============================================================================",
+  "//": "",
+  "//": "檔案用途：",
+  "//": "    這是 MCP Navigator 專案的 TypeScript 主配置檔案，採用專案引用",
+  "//": "    (Project References) 架構，將應用程式代碼和構建工具代碼分離，",
+  "//": "    提供更好的編譯性能和模組化管理。",
+  "//": "",
+  "//": "主要功能：",
+  "//": "    • 配置專案引用架構",
+  "//": "    • 設置路徑別名映射",
+  "//": "    • 統一管理子專案配置",
+  "//": "    • 優化編譯性能",
+  "//": "    • 支援增量編譯",
+  "//": "",
+  "//": "必要依賴項：",
+  "//": "    TypeScript 4.5+ 編譯器",
+  "//": "",
+  "//": "安裝步驟：",
+  "//": "    1. 確保 TypeScript 已安裝：pnpm add -D typescript",
+  "//": "    2. 確保子配置檔案存在：tsconfig.app.json, tsconfig.node.json",
+  "//": "    3. 編譯檢查：pnpm tsc -b",
+  "//": "    4. 開發模式會自動使用此配置",
+  "//": "",
+  "//": "重要配置說明：",
+  "//": "    • files: [] - 主配置不直接包含檔案",
+  "//": "    • references: 引用子專案配置",
+  "//": "      - tsconfig.app.json: 應用程式代碼配置",
+  "//": "      - tsconfig.node.json: 構建工具代碼配置",
+  "//": "    • baseUrl: 設置基礎路徑為專案根目錄",
+  "//": "    • paths: 路徑別名映射",
+  "//": "      - '@/*': 映射到 './src/*'",
+  "//": "",
+  "//": "專案引用優勢：",
+  "//": "    • 更快的編譯速度",
+  "//": "    • 更好的代碼分離",
+  "//": "    • 支援增量編譯",
+  "//": "    • 獨立的編譯上下文",
+  "//": "    • 更清晰的依賴關係",
+  "//": "",
+  "//": "使用範例：",
+  "//": "    // 編譯整個專案",
+  "//": "    pnpm tsc -b",
+  "//": "    ",
+  "//": "    // 在代碼中使用路徑別名",
+  "//": "    import { Component } from '@/components/Component';",
+  "//": "    import { utils } from '@/lib/utils';",
+  "//": "",
+  "//": "作者：MCP Navigator 專案團隊",
+  "//": "版本：1.0.0",
+  "//": "最後更新：2025-01-15",
+  "//": "=============================================================================",
   "files": [],
   "references": [
     {
